--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>frontend-qeep</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body> <div id="mobile-container">
+    <div id="mobile-content">
+       <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    </div>
+  </div>
+  
   </body>
 </html>
